# sdchat

./: .eslintrc.json  .gitignore  .prettierrc.json  LICENSE  README.cn.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
docs/: llama.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: downloader.rs  funcs.rs  main.rs
src/components/: Button.tsx  Card.tsx  ChannelTop.tsx  ChatBar.tsx  Image.tsx  Message.tsx  MessageList.tsx  PromptBook.tsx  PromptEngine.tsx  Settings.tsx  Sidebar.tsx
src/containers/: ChatView.tsx  ConfigView.tsx  ModelsView.tsx  StartView.tsx  WebUIView.tsx
src/lib/: api.ts  chatbot.ts  dialog.ts  os.ts  store.ts  tauri.ts
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
