[package]
name = "sdchat"
version = "0.1.3"
description = "A Tauri App for Stable Diffusion and GPT"
authors = ["ale"]
license = ""
repository = ""
default-run = "sdchat"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
anyhow = "1.0.66"
encoding = "0.2"
git2 = "0.17.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }
reqwest = { version = "^0.11", features = ["json"] }
tokio = { version = "^1.20.1", features = ["full"] }
futures = { version = "^0.3.23" }
thiserror = { version = "^1.0.32" }
log = { version = "^0.4.17" }
async-trait = { version="^0.1.57"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
